[project]
name = "fastapi-httpbin"
version = "0.1.0"
description = "A simple httpbin-like HTTP testing service built with FastAPI"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
